--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
     "manifest_version": 2,
-    "name": "Custom NewTab Firefox",
+    "name": "Custom NewTab",
     "version": "1.0",
     "permissions": ["activeTab"],
     "chrome_url_overrides": { "newtab": "newtab.html" },
